[package]
name = "emul8rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive"] }
confy = "2.0.0"
rand = "0.9.2"
raylib = { version = "5.5.1", features = ["wayland"], optional = true }

[features]
default = ["raylib"]
raylib = ["dep:raylib"]
