[package]
name = "emul8rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["derive"] }
colog = "1.4.0"
confy = "2.0.0"
log = "0.4.29"
rand = "0.9.2"
raylib = { version = "5.5.1", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }

[features]
default = ["raylib"]
raylib-wayland = ["raylib/wayland"]
raylib = ["dep:raylib"]
